[tool.poetry]
name = "assets.minecraft.net-jars"
version = "0.1.0"
description = ""
authors = ["jackassmc <84429870+jackassmc@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "==22.3.0"
isort = "^5.10.1"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
py_version = "auto"
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
